--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -19,7 +19,8 @@ var winkVideoData_pms = {
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
 <source src="./../downloads/w15/w15_wink/w15.mp4" type="video/mp4"/></video></div>
-<p></p><h1>w12</h1>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pAG0eWzy49Y?si=0GnLrrTVezc6opxc" title="YouTube video player" width="560"></iframe></p><h1>w12</h1>
 <p>用python程式讀取<a href="/downloads/2a_w12_seat.txt">2a_w12_seat.txt</a>排出座位表(<a href="/downloads/w12.py">w12.py</a>)：</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">file_path = "2a_w12_seat.txt"
 
@@ -106,7 +107,7 @@ var winkVideoData_pms = {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/mwadaU5GAe0?si=JAsdB1dI2x-u8GWt" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/6n68SETLNMs?si=cBO9zdeojOqlfMTS" title="YouTube video player" width="560"></iframe></p>
 <h1>NOTE</h1>
-<h2>Exam</h2>
+<h2>考試</h2>
 <p>在系上 IPv6 網段時, 可以在線上考試主機 <a href="https://exam.cycu.org">https://exam.cycu.org</a> 帳號註冊時段<a href="https://exam.cycu.org/public/code/tce_user_registration.php">進行註冊</a>:</p>
 <p><img alt="" height="211" src="/images/2023_exam_cycu_org_register.png" width="420"/></p>
 <p>其中:</p>
@@ -119,8 +120,7 @@ var winkVideoData_pms = {
 <p style="padding-left: 30px;">groups:</p>
 <p style="padding-left: 60px;">二甲: cad2023a</p>
 <p style="padding-left: 60px;"></p>
-<p style="padding-left: 30px;"></p>
-<h2>s1511</h2>
+<p style="padding-left: 30px;"></p><h2>s1511</h2>
 <p><strong>如何連線s1511.cycu.org並執行動態網站?</strong></p>
 <p>1.首先要開啟cmd(小黑窗)中執行ssh cad(學號)@s1511.cycu.org</p>
 <p>  *若要用可攜中start.bat中的cmd要先將start.bat用編譯器打開並將第三行蓋掉,然後重新啟動。</p>
