--- a/content/Exam.html
+++ b/content/Exam.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H2">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -131,7 +131,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='exam.html'>exam</a><ul class='dropdown'><li><a href='wink.html'>wink</a></li></ul><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='Exam.html'>Exam</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='Internet Set.html'>Internet Set</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Exam.html'>Exam</a><ul class='dropdown'><li><a href='wink.html'>wink</a></li></ul><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='網路設定.html'>網路設定</a></li></ul><li><a href='PMS.html'>PMS</a><li class='has-children'><a href='Wink.html'>Wink</a><ul class='dropdown'><li><a href='pms.html'>pms</a></li></ul><li class='has-children'><a href='OBS.html'>OBS</a><ul class='dropdown'><li><a href='solidworks.html'>solidworks</a></li></ul><li class='has-children'><a href='NOTE.html'>NOTE</a><ul class='dropdown'><li><a href='考試.html'>考試</a><li><a href='s1511.html'>s1511</a><li><a href='Replit.html'>Replit</a><li><a href='Internet Set.html'>Internet Set</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -142,21 +142,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">NOTE << <a href='NOTE.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511<br /><h1>Exam</h1>
-<p>在系上 IPv6 網段時, 可以在線上考試主機 <a href="https://exam.cycu.org">https://exam.cycu.org</a> 帳號註冊時段<a href="https://exam.cycu.org/public/code/tce_user_registration.php">進行註冊</a>:</p>
-<p><img alt="" height="211" src="./../images/2023_exam_cycu_org_register.png" width="420"/></p>
-<p>其中:</p>
-<p style="padding-left: 30px;">username 請填入學號</p>
-<p style="padding-left: 30px;">email 請使用學號@nfu.edu.tw</p>
-<p style="padding-left: 30px;">選定密碼之前, 請將密碼存入個人手機的備忘錄</p>
-<p style="padding-left: 30px;">password 輸入兩次, 至少包含八個數字與英文字母的組合字串</p>
-<p style="padding-left: 30px;">name 請輸入中文姓名的名字</p>
-<p style="padding-left: 30px;">surname 請輸入中文姓名的姓</p>
-<p style="padding-left: 30px;">groups:</p>
-<p style="padding-left: 60px;">二甲: cad2023a</p>
-<p style="padding-left: 60px;"></p>
-<p style="padding-left: 30px;"></p>
-<br />NOTE << <a href='NOTE.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511</div>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='wink.html'>Next</a> >> wink<br /><h1>Exam</h1><br />About << <a href='About.html'>Previous</a> <a href='wink.html'>Next</a> >> wink</div>
         
     <!-- footer -->
       <div class="container">
