--- a/content/考試.html
+++ b/content/考試.html
@@ -142,22 +142,20 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS<br /><h1>網路設定</h1>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 10,
-  buttonFrameLength: 5,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w13/w13.mp4"/></video></div>
-<p></p>
-<br />w12 << <a href='w12.html'>Previous</a> <a href='PMS.html'>Next</a> >> PMS</div>
+    <div id="tipue_search_content">NOTE << <a href='NOTE.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511<br /><h1>考試</h1>
+<p>在系上 IPv6 網段時, 可以在線上考試主機 <a href="https://exam.cycu.org">https://exam.cycu.org</a> 帳號註冊時段<a href="https://exam.cycu.org/public/code/tce_user_registration.php">進行註冊</a>:</p>
+<p><img alt="" height="211" src="./../images/2023_exam_cycu_org_register.png" width="420"/></p>
+<p>其中:</p>
+<p style="padding-left: 30px;">username 請填入學號</p>
+<p style="padding-left: 30px;">email 請使用學號@nfu.edu.tw</p>
+<p style="padding-left: 30px;">選定密碼之前, 請將密碼存入個人手機的備忘錄</p>
+<p style="padding-left: 30px;">password 輸入兩次, 至少包含八個數字與英文字母的組合字串</p>
+<p style="padding-left: 30px;">name 請輸入中文姓名的名字</p>
+<p style="padding-left: 30px;">surname 請輸入中文姓名的姓</p>
+<p style="padding-left: 30px;">groups:</p>
+<p style="padding-left: 60px;">二甲: cad2023a</p>
+<p style="padding-left: 60px;"></p>
+<p style="padding-left: 30px;"></p><br />NOTE << <a href='NOTE.html'>Previous</a> <a href='s1511.html'>Next</a> >> s1511</div>
         
     <!-- footer -->
       <div class="container">
