--- a/content/w15 wink.html
+++ b/content/w15 wink.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -142,8 +142,23 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">pms << <a href='pms.html'>Previous</a> <a href='solidworks.html'>Next</a> >> solidworks<br /><h1>OBS</h1>
-<br />pms << <a href='pms.html'>Previous</a> <a href='solidworks.html'>Next</a> >> solidworks</div>
+    <div id="tipue_search_content">Exam << <a href='Exam.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w15 wink</h1>
+<p>w15_wink</p>
+<script>
+var winkVideoData_pms = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
+<source src="./../downloads/w15/w15_wink/w15.mp4" type="video/mp4"/></video></div>
+<p></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/pAG0eWzy49Y?si=0GnLrrTVezc6opxc" title="YouTube video player" width="560"></iframe></p><br />Exam << <a href='Exam.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
         
     <!-- footer -->
       <div class="container">
