--- a/content/pms.html
+++ b/content/pms.html
@@ -158,7 +158,7 @@ var winkVideoData_pms = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_pms" height="600" muted="true" width="800">
 <source src="./../downloads/pms_wink/pms.mp4" type="video/mp4"/></video></div>
 <p></p>
-<br />Wink << <a href='Wink.html'>Previous</a> <a href='OBS.html'>Next</a> >> OBS</div>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" src="https://www.youtube.com/embed/VnfJrlLfaYA?si=2F52Clii8FghpPkm" title="YouTube video player" width="560"></iframe></p><br />Wink << <a href='Wink.html'>Previous</a> <a href='OBS.html'>Next</a> >> OBS</div>
         
     <!-- footer -->
       <div class="container">
